# wlanpi-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
debian/: changelog  control  postinst  postrm  rules  wlanpi-mcp.install
docs/: auth-flow.md
install/etc/wlanpi-mcp/: config.env.example
install/etc/wlanpi-mcp/ufw/: wlanpi-mcp-ufw-rules-setup.sh  wlanpi-mcp.rules
install/lib/systemd/system/: wlanpi-mcp-ufw-first-boot.service  wlanpi-mcp.service
tests/: conftest.py  test_auth.py  test_capture_analysis.py  test_client.py  test_tools_gaps.py  test_tools_phase2.py  test_tools_phase3.py  test_tools_system.py
wlanpi_mcp/: __init__.py  __main__.py  config.py  server.py
wlanpi_mcp/auth/: hmac_client.py  token_context.py  token_manager.py
wlanpi_mcp/client/: core_client.py
wlanpi_mcp/middleware/: api_key.py  bearer_token.py
wlanpi_mcp/prompts/: diagnostics.py
wlanpi_mcp/resources/: bluetooth.py  capture.py  device.py  mode.py  netconfig.py  network.py  profiler.py  services.py
wlanpi_mcp/tools/: advanced.py  bluetooth.py  capture.py  netconfig.py  network.py  profiler.py  system.py  utils.py  vlan.py  wifi.py  wlan.py
